# social-media

./: .dockerignore  .example.env  .gitignore  .manage_completions.sh  .urls  .venvrc  Dockerfile  README.md  aq  docker-compose.yml  minio-docker.sh  postgres-docker.sh  pyproject.toml  requirements.txt
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/Components/: Login.tsx  LoginPage.tsx
frontend/src/comp.bak/: Login.tsx  Redirect.tsx  Signup.tsx  alerts.tsx
frontend/src/components/: AddPostModal.tsx  AppSidebar.tsx  Header.tsx  Login.tsx  MasonryGrid.tsx  PinCard.tsx  PinModal.tsx  ProfileHeader.tsx
frontend/src/context/: UserContext.tsx
frontend/src/data/: pins.ts
frontend/src/lib/: axios.ts  defaults.ts
frontend/src/pages/: AuthCallback.tsx  ChatRoom.tsx  EditProfile.tsx  Inbox.tsx  Index.tsx  Login.tsx  Profile.tsx  Register.tsx
src/: populate.py
src/chatapp/: consumers.py  models.py  routing.py  urls.py  utils.py  views.py
src/chatapp/migrations/: 0001_initial.py  0002_auto_20250930_0836.py  0002_rename_message_message_msg_remove_message_user.py
src/chatapp/serializers/: chat_serializer.py
src/chatapp/services/: chat_service.py
src/chatapp/static/: manifest.json
src/core/: models.py  serializer.py  urls.py
src/core/auth/: __init__.py  auth.py  github_auth.py  google_auth.py  password_service.py  permission_middleware.py
src/core/migrations/: 0001_initial.py  0002_alter_credential_provider_id.py  0002_rename_name_user_username_remove_user_age_and_more.py  0003_remove_user_is_active.py  0003_remove_user_password_user_created_at_credential.py  0004_remove_credential_password_user_date_joined_and_more.py  0005_user_followers.py  0006_alter_user_avatar.py  0007_alter_user_avatar_post_comment.py  0008_alter_comment_created_at_alter_post_created_at.py  0009_alter_comment_created_at_alter_post_created_at.py  0010_alter_post_user.py
src/core/serializers/: comment_serializer.py  follow_serializer.py  post_serializer.py  user_serializer.py
src/core/services/: base_auth_service.py  comment_service.py  github_auth_service.py  google_auth_service.py  password_auth_service.py  password_service.py  post_service.py  token_service.py  user_services.py
src/core/views/: auth_view.py  base_social_auth_view.py  comment_view.py  cred_view.py  (+5 more)
src/social/: asgi.py  settings.py  urls.py
(+9 files in other folders)
