[project]
name = "social"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "django-stubs>=5.2.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-stubs>=3.16.2",
    "dotenv>=0.9.9",
    "pillow>=11.3.0",
]

[tool.poe.tasks]
make = "./src/manage.py makemigrations"
migrate = "./src/manage.py migrate"
run = "./src/manage.py runserver"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
]

